# new_admin_panel_sprint_3

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  backend.env.example  db.env.example  docker-compose.override.yml  docker-compose.test.yml  etl.env.example  gunicorn.conf.py  nginx.conf  postgresql.conf  pyproject.toml  setup.cfg
configs/: site.conf
django_api/: movies API.postman_collection.json  openapi.yaml
movies_admin/: Dockerfile  manage.py  requirements.txt
movies_admin/config/: asgi.py  settings.py  urls.py  wsgi.py
movies_admin/config/components/: allowed_ips.py  database.py  healthcheck.py  installed_apps.py  logging.py
movies_admin/movies/: admin.py  apps.py  models.py
movies_admin/movies/api/: urls.py
movies_admin/movies/api/v1/: urls.py  views.py
movies_admin/movies/locale/en/LC_MESSAGES/: django.mo  django.po
movies_admin/movies/locale/ru/LC_MESSAGES/: django.mo  django.po
movies_admin/movies/migrations/: 0001_initial.py  0002_alter_filmwork_creation_date.py  0003_alter_filmwork_description.py  0004_alter_filmwork_file_path.py  0005_alter_genre_description.py  0006_rename_film_work_id_genrefilmwork_film_work_and_more.py  0007_rename_genre_filmwork_genre_id_and_more.py  0008_remove_personfilmwork_film_work_person_role_idx_and_more.py  0009_remove_genrefilmwork_film_work_genre_idx_and_more.py  0010_remove_genrefilmwork_film_work_genre_ctr_and_more.py  0011_alter_genrefilmwork_film_work_and_more.py  0012_alter_personfilmwork_role.py
movies_admin/uwsgi/: uwsgi.ini
postgres_to_es/: data_transformer.py  es_loader.py  etl.py  main.py  postgres_extractor.py
postgres_to_es/config/: entrypoint.sh  etl_config.py  etl_models.py  sql_queries.py  states.py
postgres_to_es/indexes/: movies.json
schema_design/: README.md  movies_database.ddl
sqlite_to_postgres/: load_data.py  postgres_dataclasses.py  postgres_saver.py  sqlite_extractor.py
tests/check_consistency/: test.py
